[package]
name = "ebpfsieve"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Corum Collective LLC <contact@santh.io>"]
description = "Byte-frequency prefilter for read-heavy scanning pipelines with optional eBPF offload"
license = "MIT"
repository = "https://github.com/santhsecurity/Santh"
readme = "README.md"
keywords = ["ebpf", "sieve", "performance", "filtering", "prefilter"]
categories = ["network-programming", "os", "performance"]
include = ["src/**", "Cargo.toml", "README.md", "build.rs"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
thiserror = "2"
libc = "0.2"
aya = { version = "0.13", optional = true }
ebpfkit = { version = "0.1", path = "../../kernel/ebpfkit", optional = true }

[dev-dependencies]
proptest = "1.0"
rayon = "1.5"
serde_json = "1.0"
tempfile = "3.2"

[features]
default = []
serde = ["dep:serde", "dep:toml"]
kernel-bpf = ["dep:aya"]
socket-bpf = ["dep:ebpfkit"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
